# python-file-meta

./: .gitignore  Makefile  pyproject.toml
file_meta/: console.py  repo.py
tests/: .gitignore  test_file_meta.py  test_repo.py
tests/fake_datas/case1/files/: same_file
