[tool.poetry]
name = "file-meta"
version = "0.1.0"
description = ""
authors = ["Chen Yang <yangchen@thinkmore.info>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.7.0"
peewee = "^3.15.4"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
loguru = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fm = 'file_meta.console:run'
